# py-api-template

./: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  python-uv-app.dockerfile  python-uv.dockerfile
.cursor/rules/: clean-architecture.md  uv-run.mdc
docs/: Docker.md  HTTP.md
examples/: hello_world.py
notebooks/: sandbox.ipynb
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dto/: __init__.py  flip_word_dto.py  repository_dto.py
src/application/use_cases/: flip_word_use_case.py  healt_check_use_case.py  repository_use_case.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  app_config.py
src/domain/interfaces/: __init__.py  storeage_interface.py
src/domain/value_objects/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/messaging/: __init__.py
src/infrastructure/repositories/: __init__.py  in_memory.py  redis_repository.py
src/presentation/: __init__.py
src/presentation/controllers/http/: flip_word_controller.py  health_check_controller.py  repository_controller.py
src/presentation/controllers/mqtt/: repository_controller.py
src/presentation/dependencies/: __init__.py  container.py
src/presentation/mappers/: __init__.py
src/presentation/validators/: __init__.py
